--- a/tailwind-shoes/package.json
+++ b/tailwind-shoes/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "preinstall": "npm install vite",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -31,7 +32,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14",
-    "vite": "^5.4.9",
+    "vite": "^5.4.14",
     "vite-plugin-svgr": "^4.2.0"
   }
 }
